reorganize content for operator (#58)
* reorganize content for operator

Update mkdocs.yml

* add en content

* replace what is operator

* Update first 3 sections.

* Update 2.3.create-cluster.md

* update and polish cluster creating doc

* Update quick create cluster

* Update sample code

* Update 2.3.create-cluster.md

* Updated operator TOC

* push the cluster upgrading doc

* add the delete clusters doc

* Update 4.2.configuration.md

optimize cluster configurations

optimize cluster configurations

Update 4.2.configuration.md

* add scaling clusters doc

* add HPA

* add pv expansion % pv reclaim

* add enable mtls

* add admission control

* add balancing&rolling update&self-healing

* Update hyperlink

* add log & backup

* add faq

* add zone

* comment fix & operator management docs optimization

* fix

* minor changes

* comment fix

* Update docs-2.0-en/k8s-operator/3.operator-management/3.1.customize-installation.md

Co-authored-by: Chris Chen <chris.chen@vesoft.com>

* Update docs-2.0-en/k8s-operator/3.operator-management/3.3.upgrade-operator.md

Co-authored-by: Chris Chen <chris.chen@vesoft.com>

* Update docs-2.0-en/k8s-operator/4.cluster-administration/4.1.installation/4.1.2.cluster-upgrade.md

Co-authored-by: Chris Chen <chris.chen@vesoft.com>

* Update docs-2.0-en/k8s-operator/4.cluster-administration/4.1.installation/4.1.2.cluster-upgrade.md

Co-authored-by: Chris Chen <chris.chen@vesoft.com>

* Update docs-2.0-en/k8s-operator/4.cluster-administration/4.1.installation/4.1.3.cluster-uninstall.md

Co-authored-by: Chris Chen <chris.chen@vesoft.com>

* Update docs-2.0-en/k8s-operator/4.cluster-administration/4.1.installation/4.1.3.cluster-uninstall.md

Co-authored-by: Chris Chen <chris.chen@vesoft.com>

* Update docs-2.0-en/k8s-operator/4.cluster-administration/4.1.installation/4.1.3.cluster-uninstall.md

Co-authored-by: Chris Chen <chris.chen@vesoft.com>

* Update docs-2.0-en/k8s-operator/1.introduction-to-nebula-operator.md

Co-authored-by: Chris 

--- a/docs-2.0-en/20.appendix/0.FAQ.md
+++ b/docs-2.0-en/20.appendix/0.FAQ.md
@@ -380,6 +380,10 @@ NebulaGraph {{ nebula.release }} does not provide any commands or tools to suppo
 
 You also need to run [Balance Data and Balance leader](../8.service-tuning/load-balance.md) after scaling in/out storaged.
 
+You can scale Graph and Storage services with Dashboard Enterprise Edition. For details, see [Scale](../nebula-dashboard-ent/4.cluster-operator/operator/scale.md). 
+
+You can also use NebulaGraph Operator to scale Graph and Storage services. For details, see [Deploy NebulaGraph clusters](../k8s-operator/4.cluster-administration/4.1.installation/4.1.1.cluster-install.md).
+
 #### Add or remove disks in the Storage nodes
 
 Currently, Storage cannot dynamically recognize new added disks. You can add or remove disks in the Storage nodes of the distributed cluster by following these steps:
