--- a/docs-2.0-en/5.configurations-and-logs/1.configurations/1.configurations.md
+++ b/docs-2.0-en/5.configurations-and-logs/1.configurations/1.configurations.md
@@ -125,7 +125,7 @@ By default, each NebulaGraph service gets configured from its configuration file
 
 * For clusters installed with Kubectl
 
-  For details, see [Customize configuration parameters for a NebulaGraph cluster](../../nebula-operator/8.custom-cluster-configurations/8.1.custom-conf-parameter.md).
+  For details, see [Customize configuration parameters for a NebulaGraph cluster](../../k8s-operator/4.cluster-administration/4.2.configuration.md).
 
 ### Dynamically modifying configurations using command
 
