--- a/docs-2.0-zh/20.appendix/0.FAQ.md
+++ b/docs-2.0-zh/20.appendix/0.FAQ.md
@@ -594,6 +594,9 @@ Fail to create a new session from connection pool, fail to authenticate, error: 
     Storage 扩缩容之后，根据需要执行`SUBMIT JOB BALANCE DATA`将当前图空间的分片平均分配到所有 Storage 节点中和执行`SUBMIT JOB BALANCE LEADER`命令均衡分布所有图空间中的 leader。运行命令前，需要选择一个图空间。
 
  
+- 使用悦数运维监控，在可视化页面对 Graph 和 Storage 进行快速扩缩容，详情参见[集群操作-扩缩容](../nebula-dashboard-ent/4.cluster-operator/operator/scale.md)。
+
+- 使用 NebulaGraph Operator 扩缩容集群，详情参见[创建{{nebula.name}}集群](../k8s-operator/4.cluster-administration/4.3.scaling/4.3.1.resizing.md)。
 
 
 ### 如何在 Storage 节点中增加或减少磁盘
