--- a/docs-2.0-zh/4.deployment-and-installation/2.compile-and-install-nebula-graph/6.deploy-nebula-graph-with-peripherals.md
+++ b/docs-2.0-zh/4.deployment-and-installation/2.compile-and-install-nebula-graph/6.deploy-nebula-graph-with-peripherals.md
@@ -2,13 +2,9 @@
 
 用户可以使用以下生态工具安装{{nebula.name}}：
 
-
-
 - NebulaGraph Operator
 
 ## 安装详情
 
-
-
-- 使用 **NebulaGraph Operator** 安装{{nebula.name}}的详情，参见[使用 Kubectl 部署{{nebula.name}}集群](../../nebula-operator/3.deploy-nebula-graph-cluster/3.1create-cluster-with-kubectl.md) 或 [使用 Helm 部署{{nebula.name}}集群](../../nebula-operator/3.deploy-nebula-graph-cluster/3.2create-cluster-with-helm.md)。
+使用 **NebulaGraph Operator** 安装{{nebula.name}}的详情，参见[创建{{nebula.name}}集群](../../k8s-operator/4.cluster-administration/4.1.installation/4.1.1.cluster-install.md)。
 
