--- a/docs-2.0-zh/5.configurations-and-logs/1.configurations/1.configurations.md
+++ b/docs-2.0-zh/5.configurations-and-logs/1.configurations/1.configurations.md
@@ -133,7 +133,7 @@ curl -s 127.0.0.1:19559/flags
 
 * 针对使用 Kubectl 方式创建的集群：
   
-  具体操作，参见[自定义集群的配置参数](../../nebula-operator/8.custom-cluster-configurations/8.1.custom-conf-parameter.md)。
+  具体操作，参见[自定义集群的配置参数](../../k8s-operator/4.cluster-administration/4.2.configuration.md)。
 
 ### 使用命令动态修改配置
   
