--- a/docs-2.0-en/k8s-operator/2.get-started/2.3.create-cluster.md
+++ b/docs-2.0-en/k8s-operator/2.get-started/2.3.create-cluster.md
@@ -8,7 +8,6 @@ This topic introduces how to create a {{nebula.name}} cluster with the following
 ## Prerequisites
 
 - [NebulaGraph Operator is installed.](2.1.install-operator.md)
-- [LM is installed and the License Key is loaded.](2.2.deploy-lm.md)
 - [A StorageClass is created.](https://kubernetes.io/docs/concepts/storage/storage-classes/)
 
 ## Create a {{nebula.name}} cluster with Helm
@@ -43,32 +42,10 @@ This topic introduces how to create a {{nebula.name}} cluster with the following
   kubectl create namespace "${NEBULA_CLUSTER_NAMESPACE}"
   ```
 
-5. Create a Secret for pulling the NebulaGraph cluster image from a private repository.
-
-  ```bash
-  kubectl -n "${NEBULA_CLUSTER_NAMESPACE}" create secret docker-registry <image-pull-secret> \
-  --docker-server=DOCKER_REGISTRY_SERVER \
-  --docker-username=DOCKER_USER \
-  --docker-password=DOCKER_PASSWORD
-  ```
-
-  - `<image-pull-secret>`: Specify the name of the Secret.
-  - `DOCKER_REGISTRY_SERVER`: Specify the server address of the private repository from which the image will be pulled, such as `reg.example-inc.com`.
-  - `DOCKER_USER`: The username for the image repository.
-  - `DOCKER_PASSWORD`: The password for the image repository.
-
-6. Apply the variables to the Helm chart to create a NebulaGraph cluster.
+5. Apply the variables to the Helm chart to create a NebulaGraph cluster.
 
   ```bash
   helm install "${NEBULA_CLUSTER_NAME}" nebula-operator/nebula-cluster \
-      # Configure the access address and port (default port is '9119') that points to the LM. You must configure this parameter in order to obtain the license information. Only for NebulaGraph Enterprise Edition clusters.
-      --set nebula.metad.licenseManagerURL="192.168.8.XXX:9119" \
-      # Configure the image addresses for each service in the cluster.
-      --set nebula.graphd.image="<reg.example-inc.com/test/graphd-ent>" \
-      --set nebula.metad.image="<reg.example-inc.com/test/metad-ent>" \
-      --set nebula.storaged.image="<reg.example-inc.com/test/storaged-ent>" \
-      # Configure the Secret for pulling images from a private repository.
-      --set imagePullSecrets[0].name="{<image-pull-secret>}" \
       --set nameOverride="${NEBULA_CLUSTER_NAME}" \
       --set nebula.storageClassName="${STORAGE_CLASS_NAME}" \
       # Specify the version of the NebulaGraph cluster. 
@@ -78,9 +55,6 @@ This topic introduces how to create a {{nebula.name}} cluster with the following
       --version={{operator.release}} \
       --namespace="${NEBULA_CLUSTER_NAMESPACE}" \
   ```
-
-  NebulaGraph Operator supports creating clusters with zones. For more information, see [Install NebulaGraph clusters](../4.cluster-administration/4.1.installation/4.1.1.cluster-install.md).
-
 
 ## Create a {{nebula.name}} cluster with Kubectl
 
@@ -97,22 +71,7 @@ The following example shows how to create a NebulaGraph cluster by creating a cl
   kubectl create namespace nebula
   ```
 
-2. Create a Secret for pulling the NebulaGraph Enterprise image from a private repository.
-
-  ```bash
-  kubectl -n <nebula> create secret docker-registry <image-pull-secret> \
-  --docker-server=DOCKER_REGISTRY_SERVER \
-  --docker-username=DOCKER_USER \
-  --docker-password=DOCKER_PASSWORD
-  ```
-
-  - `<nebula>`: The namespace where this Secret will be stored.
-  - `<image-pull-secret>`: Specify the name of the Secret.
-  - `DOCKER_REGISTRY_SERVER`: Specify the server address of the private repository from which the image will be pulled, such as `reg.example-inc.com`.
-  - `DOCKER_USER`: The username for the image repository.
-  - `DOCKER_PASSWORD`: The password for the image repository.
-
-3. Define the cluster configuration file.
+2. Define the cluster configuration file `nebulacluster.yaml`.
 
   ??? info "Expand to see an example configuration for the cluster"
 
@@ -128,7 +87,7 @@ The following example shows how to create a NebulaGraph cluster by creating a cl
           whenUnsatisfiable: "ScheduleAnyway"
         graphd:
           # Container image for the Graph service.
-          image: reg.example-inc.com/xxx/xxx
+          image: vesoft/nebula-graphd
           logVolumeClaim:
             resources:
               requests:
@@ -145,14 +104,9 @@ The following example shows how to create a NebulaGraph cluster by creating a cl
               memory: 500Mi
           version: v{{nebula.release}}
         imagePullPolicy: Always
-        # Secret for pulling images from a private repository.
-        imagePullSecrets:
-        - name: secret-name
         metad:
-          # LM access address and port number for obtaining License information.
-          licenseManagerURL: 192.168.x.xxx:9119
           # Container image for the Meta service.
-          image: reg.example-inc.com/xxx/xxx
+          image: vesoft/nebula-metad
           logVolumeClaim:
             resources:
               requests:
@@ -178,7 +132,7 @@ The following example shows how to create a NebulaGraph cluster by creating a cl
         schedulerName: default-scheduler
         storaged:
           # Container image for the Storage service.
-          image: reg.example-inc.com/xxx/xxx
+          image: vesoft/nebula-storaged
           logVolumeClaim:
             resources:
               requests:
@@ -200,22 +154,13 @@ The following example shows how to create a NebulaGraph cluster by creating a cl
           version: v{{nebula.release}}
       ```
 
-  The following parameters must be customized:
-
-  - `spec.metad.licenseManagerURL`: Configure the URL that points to the LM, which consists of the access address and port number (default port `9119`) of the LM.
-  - `spec.<graphd|metad|storaged>.image`: Specify the container image of the Graph, Meta, and Storage service respectively. 
-  - `spec.imagePullSecrets`: Specify the Secret for pulling the NebulaGraph Enterprise service images from a private repository.
-  - `spec.<graphd|metad|storaged>.logVolumeClaim.storageClassName`: Specify the log disk storage configurations for the Graph, Meta, and Storage service respectively.
-  - `spec.metad.dataVolumeClaim.storageClassName`: Specify the data disk storage configurations for the Meta service.
-  - `spec.storaged.dataVolumeClaims.storageClassName`: Specify the data disk storage configurations for the Storage service.
-
   For more information about the other parameters, see [Install NebulaGraph clusters](../4.cluster-administration/4.1.installation/4.1.1.cluster-install.md).
 
 
-4. Create a NebulaGraph cluster.
+3. Create a NebulaGraph cluster.
 
   ```bash
-  kubectl create -f apps_v1alpha1_nebulacluster.yaml
+  kubectl create -f nebulacluster.yaml
   ```
 
   Output:
@@ -224,7 +169,7 @@ The following example shows how to create a NebulaGraph cluster by creating a cl
   nebulacluster.apps.nebula-graph.io/nebula created
   ```
 
-5. Check the status of the NebulaGraph cluster.
+4. Check the status of the NebulaGraph cluster.
    
   ```bash
   kubectl get nc nebula
