--- a/docs-2.0-en/k8s-operator/3.operator-management/3.1.customize-installation.md
+++ b/docs-2.0-en/k8s-operator/3.operator-management/3.1.customize-installation.md
@@ -66,7 +66,7 @@ Part of the above parameters are described as follows:
 | `controllerManager.replicas`           | `2`                             | The number of controller-manager replicas.                |
 | `admissionWebhook.create`              | `false`                          | Whether to enable Admission Webhook. This option is disabled. To enable it, set the value to `true` and you will need to install [cert-manager](https://cert-manager.io/docs/installation/helm/). For details, see [Enable admission control](../4.cluster-administration/4.7.security/4.7.2.enable-admission-control.md).             |
 | `shceduler.create`                     | `true`                          | Whether to enable Scheduler.                       |
-| `shceduler.schedulerName`              | `nebula-scheduler`              | The name of the scheduler customized by NebulaGraph Operator. It is used to evenly distribute Storage Pods across different [zones](../4.cluster-administration/4.8.ha-and-balancing/4.8.2.enable-zone.md).                              |
+| `shceduler.schedulerName`              | `nebula-scheduler`              | The name of the scheduler customized by NebulaGraph Operator. It is used to evenly distribute Storage Pods across different zones which are only available in the Enterprise Edition.|                            
 | `shceduler.replicas`                   | `2`                             | The number of nebula-scheduler replicas.                  |
 
 
