--- a/docs-2.0-zh/3.ngql-guide/9.space-statements/6.clear-space.md
+++ b/docs-2.0-zh/3.ngql-guide/9.space-statements/6.clear-space.md
@@ -5,7 +5,7 @@
 
 !!! note
 
-    建议在执行`CLEAR SPACE`操作之后，立即执行[`SUBMIT JOB COMPACT`](../../4.job-statements/#submit_job_compact)操作以提升查询性能。需要注意的是，COMPACT 操作可能会影响查询性能，建议在业务低峰期（例如凌晨）执行该操作。
+    建议在执行`CLEAR SPACE`操作之后，立即执行 [SUBMIT JOB COMPACT](../4.job-statements.md#submit_job_compact)操作以提升查询性能。需要注意的是，COMPACT 操作可能会影响查询性能，建议在业务低峰期（例如凌晨）执行该操作。
     
 ## 权限要求
 
