--- a/docs-2.0-zh/k8s-operator/3.operator-management/3.1.customize-installation.md
+++ b/docs-2.0-zh/k8s-operator/3.operator-management/3.1.customize-installation.md
@@ -68,7 +68,7 @@ scheduler:
 | `controllerManager.replicas`           | `2`                             | controller-manager 副本数。                 |
 | `admissionWebhook.create`              | `false`                          | 是否启用 Admission Webhook。默认关闭，如需开启，需设置为`true`并且需要安装 [cert-manager](https://cert-manager.io/docs/installation/helm/)。详情参见[开启准入控制](../4.cluster-administration/4.7.security/4.7.2.enable-admission-control.md)。 |
 | `scheduler.create`                     | `true`                          | 是否启用 Scheduler。                       |
-| `scheduler.schedulerName`              | `nebula-scheduler`              | NebulaGraph Operator 自定义的调度器名称。用于开启 [Zone](../4.cluster-administration/4.8.ha-and-balancing/4.8.2.enable-zone.md)时，均匀调度 Storage Pods 到不同的 Zone 中。|              
+| `scheduler.schedulerName`              | `nebula-scheduler`              | NebulaGraph Operator 自定义的调度器名称。用于开启 Zone 时，均匀调度 Storage Pods 到不同的 Zone 中。仅适用于企业版集群。|              
 | `scheduler.replicas`                   | `2`                             | nebula-scheduler 副本数。                  |
 
 ## 示例
