--- a/docs-2.0-en/k8s-operator/4.cluster-administration/4.1.installation/4.1.1.cluster-install.md
+++ b/docs-2.0-en/k8s-operator/4.cluster-administration/4.1.installation/4.1.1.cluster-install.md
@@ -10,7 +10,6 @@ Using NebulaGraph Operator to install NebulaGraph clusters enables automated clu
 
 - [Install NebulaGraph Operator](../../2.get-started/2.1.install-operator.md)
 - [Create a StorageClass](https://kubernetes.io/docs/concepts/storage/storage-classes/)
-- [Install and Load the License Key](../../2.get-started/2.2.deploy-lm.md)
 
 ## Use `kubectl apply`
 
@@ -20,22 +19,7 @@ Using NebulaGraph Operator to install NebulaGraph clusters enables automated clu
   kubectl create namespace nebula
   ```
 
-2. Create a Secret for pulling NebulaGraph images from a private registry.
-
-  ```bash
-  kubectl -n <nebula> create secret docker-registry <image-pull-secret> \
-  --docker-server=DOCKER_REGISTRY_SERVER \
-  --docker-username=DOCKER_USER \
-  --docker-password=DOCKER_PASSWORD
-  ```
-
-  - `<nebula>`: Namespace to store the Secret.
-  - `<image-pull-secret>`: Name of the Secret.
-  - `DOCKER_REGISTRY_SERVE`: Private registry server address for pulling images, for example, `reg.example-inc.com`.
-  - `DOCKER_USE`: Username for the image registry.
-  - `DOCKER_PASSWORD`: Password for the image registry.
-
-3. Create a YAML configuration file for the cluster. For example, create a cluster named `nebula`.
+2. Create a YAML configuration file `nebulacluster.yaml` for the cluster. For example, create a cluster named `nebula`.
 
   ??? info "Expand to view an example configuration for the `nebula` cluster"
 
@@ -52,8 +36,6 @@ Using NebulaGraph Operator to install NebulaGraph clusters enables automated clu
           whenUnsatisfiable: "ScheduleAnyway"
         # Enable PV recycling.
         enablePVReclaim: false
-        # Enable the backup and restore feature.
-        enableBR: false
         # Enable monitoring.
         exporter:
           image: vesoft/nebula-stats-exporter
@@ -71,9 +53,6 @@ Using NebulaGraph Operator to install NebulaGraph clusters enables automated clu
             limits:
               cpu: "200m"
               memory: "256Mi"  
-        # Secret for pulling images from a private registry.
-        imagePullSecrets:
-        - name: secret-name 
         # Configure the image pull policy.
         imagePullPolicy: Always
         # Select the nodes for Pod scheduling.
@@ -105,7 +84,7 @@ Using NebulaGraph Operator to install NebulaGraph clusters enables automated clu
         #    successThreshold: 1
         #    timeoutSeconds: 10
           # Container image for the Graph service.
-          image: reg.example-inc.com/xxx/xxx
+          image: vesoft/nebula-graphd
           logVolumeClaim:
             resources:
               requests:
@@ -128,8 +107,6 @@ Using NebulaGraph Operator to install NebulaGraph clusters enables automated clu
           config: {}
         # Meta service configuration.
         metad:
-          # LM access address and port, used to obtain License information.
-          licenseManagerURL: 192.168.x.xxx:9119
         #  readinessProbe:
         #    failureThreshold: 3
         #    httpGet:
@@ -141,7 +118,7 @@ Using NebulaGraph Operator to install NebulaGraph clusters enables automated clu
         #    successThreshold: 1
         #    timeoutSeconds: 5
           # Container image for the Meta service.
-          image: reg.example-inc.com/xxx/xxx
+          image: vesoft/nebula-metad
           logVolumeClaim:
             resources:
               requests:
@@ -176,7 +153,7 @@ Using NebulaGraph Operator to install NebulaGraph clusters enables automated clu
         #    successThreshold: 1
         #    timeoutSeconds: 5
           # Container image for the Storage service.
-          image: reg.example-inc.com/xxx/xxx
+          image: vesoft/nebula-graphd
           logVolumeClaim:
             resources:
               requests:
@@ -200,18 +177,12 @@ Using NebulaGraph Operator to install NebulaGraph clusters enables automated clu
           config: {} 
       ```  
 
-  When creating the YAML configuration file for the cluster, you must customize the following parameters. For more detailed information about these parameters, see the **Cluster configuration parameters** section below.
+  For more detailed information about these parameters, see the **Cluster configuration parameters** section below.
 
-  - `spec.metad.licenseManagerURL`
-  - `spec.<graphd|metad|storaged>.image`
-  - `spec.imagePullSecrets`
-  - `spec.<graphd|metad|storaged>.<logVolumeClaim|dataVolumeClaim>.storageClassName`
-
-
-4. Create the NebulaGraph cluster.
+3. Create the NebulaGraph cluster.
 
   ```bash
-  kubectl create -f apps_v1alpha1_nebulacluster.yaml -n nebula
+  kubectl create -f nebulacluster.yaml -n nebula
   ```
 
   Output:
@@ -222,7 +193,7 @@ Using NebulaGraph Operator to install NebulaGraph clusters enables automated clu
 
   If you don't specify the namespace using `-n`, it will default to the `default` namespace.
 
-5. Check the status of the NebulaGraph cluster.
+4. Check the status of the NebulaGraph cluster.
 
   ```bash
   kubectl get nebulaclusters nebula -n nebula
@@ -232,7 +203,7 @@ Using NebulaGraph Operator to install NebulaGraph clusters enables automated clu
 
   ```bash
   NAME      READY   GRAPHD-DESIRED   GRAPHD-READY   METAD-DESIRED   METAD-READY   STORAGED-DESIRED   STORAGED-READY   AGE
-  nebula2   True    1                1              1               1             1                  1                86s
+  nebula    True    1                1              1               1             1                  1                86s
   ```
 
 ## Use `helm`
@@ -263,21 +234,8 @@ Using NebulaGraph Operator to install NebulaGraph clusters enables automated clu
   kubectl create namespace "${NEBULA_CLUSTER_NAMESPACE}"
   ```
 
-5. Create a Secret for pulling images from a private repository.
 
-  ```bash
-  kubectl -n "${NEBULA_CLUSTER_NAMESPACE}" create secret docker-registry <image-pull-secret> \
-  --docker-server=DOCKER_REGISTRY_SERVER \
-  --docker-username=DOCKER_USER \
-  --docker-password=DOCKER_PASSWORD
-  ```
-
-  - `<image-pull-secret>`: Specify the name of the Secret.
-  - `DOCKER_REGISTRY_SERVER`: Specify the address of the private image repository (e.g., `reg.example-inc.com`).
-  - `DOCKER_USER`: Username for the image repository.
-  - `DOCKER_PASSWORD`: Password for the image repository.
-
-6. Check the customizable configuration parameters for the `nebula-cluster` Helm chart of the `nebula-operator` when creating the cluster.
+5. Check the customizable configuration parameters for the `nebula-cluster` Helm chart of the `nebula-operator` when creating the cluster.
 
   - Run the following command to view all the configurable parameters.
 
@@ -287,7 +245,7 @@ Using NebulaGraph Operator to install NebulaGraph clusters enables automated clu
 
   - Visit [nebula-cluster/values.yaml](https://github.com/vesoft-inc/nebula-operator/blob/{{operator.branch}}/charts/nebula-cluster/values.yaml) to see all the configuration parameters for the NebulaGraph cluster. Click on [Chart parameters](https://github.com/vesoft-inc/nebula-operator/blob/{{operator.branch}}/doc/user/nebula_cluster_helm_guide.md#optional-chart-parameters) to see the parameter descriptions and their default values.
 
-7. Create the NebulaGraph cluster.
+6. Create the NebulaGraph cluster.
 
   You can use the `--set` flag to customize the default values of the NebulaGraph cluster configuration. For example, `--set nebula.storaged.replicas=3` sets the number of replicas for the Storage service to 3.
 
@@ -298,23 +256,14 @@ Using NebulaGraph Operator to install NebulaGraph clusters enables automated clu
       --version={{operator.release}} \
       # Specify the namespace for the NebulaGraph cluster.
       --namespace="${NEBULA_CLUSTER_NAMESPACE}" \
-      # Configure the Secret for pulling images from the private repository.
-      --set imagePullSecrets[0].name="{<image-pull-secret>}" \
       # Customize the chart release name.
       --set nameOverride="${NEBULA_CLUSTER_NAME}" \
-      # Configure the LM (License Manager) access address and port, with the default port being '9119'.
-      # You must configure this parameter to obtain the License information.
-      --set nebula.metad.licenseManagerURL="192.168.8.XXX:9119" \
-      # Configure the image addresses for various services in the cluster.
-      --set nebula.graphd.image="<reg.example-inc.com/test/graphd-ent>" \
-      --set nebula.metad.image="<reg.example-inc.com/test/metad-ent>" \
-      --set nebula.storaged.image="<reg.example-inc.com/test/storaged-ent>" \
       --set nebula.storageClassName="${STORAGE_CLASS_NAME}" \
       # Specify the version for the NebulaGraph cluster.
       --set nebula.version=v{{nebula.release}}
   ```
 
-8. Check the status of NebulaGraph cluster pods.
+7. Check the status of NebulaGraph cluster pods.
 
   ```bash
   kubectl -n "${NEBULA_CLUSTER_NAMESPACE}" get pod -l "app.kubernetes.io/cluster=${NEBULA_CLUSTER_NAME}"
@@ -367,11 +316,3 @@ The table below lists the configurable parameters and their descriptions for cre
 | `spec.imagePullPolicy`                                      | `Always`                 | The image pull policy for NebulaGraph images. For more details on pull policies, please see [Image pull policy](https://kubernetes.io/docs/concepts/containers/images/#image-pull-policy).                                                                                                  |
 | `spec.logRotate`                                            | `{}`                     | Log rotation configuration. For details, see [Managing Cluster Logs](../4.5.logging.md).                                                                                                                                                                                                    |
 | `spec.enablePVReclaim`                                      | `false`                  | Defines whether to automatically delete PVCs after deleting the cluster to release data. For details, see [Reclaim PV](../4.4.storage-management/4.4.3.configure-pv-reclaim.md).                                                                                                            |
-| `spec.metad.licenseManagerURL`                              | -                        | Configures the URL pointing to the License Manager (LM), consisting of the access address and port (default port `9119`). For example, `192.168.8.xxx:9119`. **You must configure this parameter to obtain the License information; otherwise, the NebulaGraph cluster will not function.** |
-| `spec.storaged.enableAutoBalance`                           | `false`                  | Whether to enable automatic balancing. For details, see [Balancing Storage Data After Scaling Out](../4.8.ha-and-balancing/4.8.3.balance-data-after-scale-out.md).                                                                                                                          |
-| `spec.enableBR`                                             | `false`                  | Defines whether to enable the BR tool. For details, see [Backup and Restore](../4.6.backup-and-restore.md).                                                                                                                                                                                 |
-| `spec.imagePullSecrets`                                     | `[]`                     | Defines the Secret required to pull images from a private repository.                                                                                                                                                                                                                       |
-
-## Related topics
-
-[Enabling Zones in a Cluster](../4.8.ha-and-balancing/4.8.2.enable-zone.md)
