--- a/docs-2.0-zh/k8s-operator/4.cluster-administration/4.1.installation/4.1.1.cluster-install.md
+++ b/docs-2.0-zh/k8s-operator/4.cluster-administration/4.1.installation/4.1.1.cluster-install.md
@@ -10,7 +10,6 @@
 
 - [安装 NebulaGraph Operator](../../2.get-started/2.1.install-operator.md)
 - [已创建 StorageClass](https://kubernetes.io/docs/concepts/storage/storage-classes/)
-- [已安装 LM 并加载 License Key](../../2.get-started/2.2.deploy-lm.md)
 
 ## 使用`kubectl apply`
 
@@ -20,22 +19,7 @@
   kubectl create namespace nebula
   ```
 
-2. 创建 Secret，用于拉取私有仓库中{{nebula.name}}镜像。
-
-  ```bash
-  kubectl -n <nebula> create secret docker-registry <image-pull-secret> \
-  --docker-server=DOCKER_REGISTRY_SERVER \
-  --docker-username=DOCKER_USER \
-  --docker-password=DOCKER_PASSWORD
-  ```
-
-  - `<nebula>`：存放该 Secret 的命名空间。
-  - `<image-pull-secret>`：指定 Secret 的名称。
-  - `DOCKER_REGISTRY_SERVE`：指定拉取镜像的私有仓库服务器地址，例如`reg.example-inc.com`。
-  - `DOCKER_USE`：镜像仓库用户名。
-  - `DOCKER_PASSWORD`：镜像仓库密码。
-
-3. 创建集群的 YAML 配置文件。例如，创建名为`nebula`的集群。
+2. 创建集群的 YAML 配置文件`nebulacluster.yaml`。例如，创建名为`nebula`的集群。
 
   ??? info "展开查看`nebula`集群的示例配置"
 
@@ -53,8 +37,6 @@
         # 是否回收 PV。
         enablePVReclaim: false
         # 是否启用备份和恢复功能。
-        enableBR: false
-        # 是否启用监控功能。
         exporter:
           image: vesoft/nebula-stats-exporter
           version: v3.3.0
@@ -71,9 +53,6 @@
             limits:
               cpu: "200m"
               memory: "256Mi"  
-        # 从私有仓库拉取镜像的 Secret。
-        imagePullSecrets:
-        - name: secret-name 
         # 配置镜像拉取策略。
         imagePullPolicy: Always
         # 选择 Pod 被调度的节点。
@@ -105,7 +84,7 @@
         #    successThreshold: 1
         #    timeoutSeconds: 10
           # Graph 服务的容器镜像。
-          image: reg.example-inc.com/xxx/xxx
+          image: vesoft/nebula-graphd
           logVolumeClaim:
             resources:
               requests:
@@ -128,8 +107,6 @@
           config: {}
         # Meta 服务的相关配置。
         metad:
-          # LM 访问地址和端口号，用于获取 License 信息。
-          licenseManagerURL: 192.168.x.xxx:9119
         #  readinessProbe:
         #    failureThreshold: 3
         #    httpGet:
@@ -141,7 +118,7 @@
         #    successThreshold: 1
         #   timeoutSeconds: 5
           # Meta 服务的容器镜像。
-          image: reg.example-inc.com/xxx/xxx
+          image: vesoft/nebula-metad
           logVolumeClaim:
             resources:
               requests:
@@ -176,7 +153,7 @@
         #    successThreshold: 1
         #    timeoutSeconds: 5
           # Storage 服务的容器镜像。
-          image: reg.example-inc.com/xxx/xxx
+          image: vesoft/nebula-storaged
           logVolumeClaim:
             resources:
               requests:
@@ -200,15 +177,10 @@
           config: {} 
       ```  
 
-  创建集群的 YAML 配置文件时，必须自定义配置以下参数，其他参数可按需配置。有关参数的详细说明，请参见下文的**集群配置参数**。
-
-  - `spec.metad.licenseManagerURL`
-  - `spec.<graphd|metad|storaged>.image`
-  - `spec.imagePullSecrets` 
-  - `spec.<graphd|metad|storaged>.<logVolumeClaim|dataVolumeClaim>.storageClassName`
+  有关参数的详细说明，请参见下文的**集群配置参数**。
 
 
-4. 创建{{nebula.name}}集群。
+3. 创建{{nebula.name}}集群。
 
   ```bash
   kubectl create -f apps_v1alpha1_nebulacluster.yaml -n nebula
@@ -223,7 +195,7 @@
   如果不通过`-n`指定命名空间，默认使用`default`命名空间。
 
 
-5. 查看{{nebula.name}}集群状态。
+4. 查看{{nebula.name}}集群状态。
    
   ```bash
   kubectl get nebulaclusters nebula -n nebula
@@ -233,7 +205,7 @@
 
   ```bash
   NAME      READY   GRAPHD-DESIRED   GRAPHD-READY   METAD-DESIRED   METAD-READY   STORAGED-DESIRED   STORAGED-READY   AGE
-  nebula2   True    1                1              1               1             1                  1                86s
+  nebula    True    1                1              1               1             1                  1                86s
   ```
 
 ## 使用`helm`
@@ -264,23 +236,8 @@
   kubectl create namespace "${NEBULA_CLUSTER_NAMESPACE}"
   ```
 
-  
-5. 创建 Secret，用于拉取私有仓库中{{nebula.name}}镜像。
 
-  ```bash
-  kubectl -n "${NEBULA_CLUSTER_NAMESPACE}" create secret docker-registry <image-pull-secret> \
-  --docker-server=DOCKER_REGISTRY_SERVER \
-  --docker-username=DOCKER_USER \
-  --docker-password=DOCKER_PASSWORD
-  ```
-
-  - `<image-pull-secret>`：指定 Secret 的名称。
-  - `DOCKER_REGISTRY_SERVE`：指定拉取镜像的私有仓库服务器地址，例如`reg.example-inc.com`。
-  - `DOCKER_USE`：镜像仓库用户名。
-  - `DOCKER_PASSWORD`：镜像仓库密码。
-
-
-6. 查看创建集群时，`nebula-operator`的`nebula-cluster` chart 的可自定义的配置项。
+5. 查看创建集群时，`nebula-operator`的`nebula-cluster` chart 的可自定义的配置项。
   
   - 执行以下命令查看所有可以配置的参数。
 
@@ -291,7 +248,7 @@
   - 单击 [nebula-cluster/values.yaml
 ](https://github.com/vesoft-inc/nebula-operator/blob/{{operator.branch}}/charts/nebula-cluster/values.yaml) 查看{{nebula.name}}集群的所有配置参数。单击 [Chart parameters](https://github.com/vesoft-inc/nebula-operator/blob/{{operator.branch}}/doc/user/nebula_cluster_helm_guide.md#optional-chart-parameters) 查看参数的描述及默认值。
 
-7. 创建{{nebula.name}}集群。
+6. 创建{{nebula.name}}集群。
 
   通过`--set`参数自定义{{nebula.name}}集群配置项的默认值，例如，`--set nebula.storaged.replicas=3`可设置{{nebula.name}}集群中 Storage 服务的副本数为 3。
 
@@ -303,22 +260,14 @@
       --version={{operator.release}} \
       # 指定{{nebula.name}}集群所处的命名空间。
       --namespace="${NEBULA_CLUSTER_NAMESPACE}" \
-      # 配置拉取私有仓库中镜像的 Secret。
-      --set imagePullSecrets[0].name="{<image-pull-secret>}" \
       # 自定义 chart 发布名称。
       --set nameOverride="${NEBULA_CLUSTER_NAME}" \
-      # 配置指向 LM 访问地址和端口，默认端口为`9119`。必须配置此参数以获取 License 信息。
-      --set nebula.metad.licenseManagerURL="192.168.8.XXX:9119" \
-      # 配置集群中各服务的镜像地址。
-      --set nebula.graphd.image="<reg.example-inc.com/test/graphd-ent>" \
-      --set nebula.metad.image="<reg.example-inc.com/test/metad-ent>" \
-      --set nebula.storaged.image="<reg.example-inc.com/test/storaged-ent>" \
       --set nebula.storageClassName="${STORAGE_CLASS_NAME}" \
       # 指定{{nebula.name}}集群的版本。
       --set nebula.version=v{{nebula.release}} 
   ``` 
 
-8. 查看{{nebula.name}}集群 Pod 的启动状态。
+7. 查看{{nebula.name}}集群 Pod 的启动状态。
    
   ```bash
   kubectl -n "${NEBULA_CLUSTER_NAMESPACE}" get pod -l "app.kubernetes.io/cluster=${NEBULA_CLUSTER_NAME}"
@@ -371,12 +320,3 @@
   | `spec.imagePullPolicy`                                      |       ` Always`                  | {{nebula.name}}镜像的拉取策略。关于拉取策略详情，请参考 [Image pull policy](https://kubernetes.io/docs/concepts/containers/images/#image-pull-policy)。                                                        |
   | `spec.logRotate`                                            | `{}`                     | 日志轮转配置。详情参见[管理集群日志](../4.5.logging.md)。                                                                                                                                                      |
   | `spec.enablePVReclaim`                                      | `false`                  | 定义是否在删除集群后自动删除 PVC 以释放数据。详情参见[回收 PV](../4.4.storage-management/4.4.3.configure-pv-reclaim.md)。                                                                                      |
-  | `spec.metad.licenseManagerURL`                              | -                        | 配置指向 [LM](../../2.get-started/2.2.deploy-lm.md) 的 URL，由 LM 的访问地址和端口（默认端口`9119`）组成。例如，`192.168.8.xxx:9119`。**必须配置此参数以获取 License 信息，否则无法使用{{nebula.name}}集群。** |
-  | `spec.storaged.enableAutoBalance`                           | `false`                  | 是否启用自动均衡。详情参见[均衡扩容后的 Storage 数据](../4.8.ha-and-balancing/4.8.3.balance-data-after-scale-out.md)。                                                                                         |
-  | `spec.enableBR`                                             | `false`                  | 定义是否启用 BR 工具。详情参见[备份与恢复](../4.6.backup-and-restore.md)。                                                                                                                                     |
-  | `spec.imagePullSecrets`                                     | `[]`                     | 定义拉取私有仓库中镜像所需的 Secret。                                                                                                                                                                          |
-
-
-## 相关链接
-
-[集群中开启 Zone](../4.8.ha-and-balancing/4.8.2.enable-zone.md)
