no-use-of-independent-operator-release-note-doc

--- a/docs-2.0-en/k8s-operator/1.introduction-to-nebula-operator.md
+++ b/docs-2.0-en/k8s-operator/1.introduction-to-nebula-operator.md
@@ -45,4 +45,4 @@ NebulaGraph Operator does not support the v1.x version of NebulaGraph. NebulaGra
 
 ## Release note
 
-[Release](../20.appendix/release-notes/operator-release-note.md)
+[Release](https://github.com/vesoft-inc/nebula-operator/releases/tag/{{operator.tag}})
