--- a/docs-2.0-zh/3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
+++ b/docs-2.0-zh/3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
@@ -1,5 +1,6 @@
 # {{nebula.name}} 查询语句概述
 
+
 本文介绍 {{nebula.name}} 的查询语句分类及各个语句的使用场景。
 
 ## 背景信息
@@ -9,13 +10,13 @@
 ## 查询语句分类
 
 {{nebula.name}} 的核心查询语句可分为：
-
-- [FETCH PROP ON](4.fetch.md)
-- [LOOKUP ON](5.lookup.md)
-- [GO](3.go.md)
-- [MATCH](2.match.md)
-- [FIND PATH](../16.subgraph-and-path/2.find-path.md)
-- [GET SUBGRAPH](../16.subgraph-and-path/1.get-subgraph.md)
+<!-- no toc -->
+- [FETCH PROP ON](#fetch_prop_on)
+- [LOOKUP ON](#lookup_on_id)
+- [GO](#go)
+- [MATCH](#match)
+- [FIND PATH](#find_path)
+- [GET SUBGRAPH](#get_subgraph)
 
 `FETCH PROP ON`和`LOOKUP ON`更多用于数据检索；`GO`和`MATCH`用于更复杂的查询和图数据遍历；`FIND PATH`和`GET SUBGRAPH`用于图数据的路径查询和子图查询。
 
