--- a/docs-2.0-zh/3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
+++ b/docs-2.0-zh/3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
@@ -213,3 +213,20 @@ nebula> GO FROM "player100" OVER follow \
 ```
 
 管道符`|`仅适用于 nGQL，不适用于 OpenCypher 语句，即不适合在 MATCH 语句中使用管道符。如果需要使用 MATCH 语句进行复合查询，可以使用 [WITH 子句](../8.clauses-and-options/with.md)。
+
+示例：
+
+```ngql
+nebula> MATCH (v:player)-->(v2:player) \
+        WITH DISTINCT v2 AS v2, v2.player.age AS Age \
+        ORDER BY Age \
+        WHERE Age<25 \
+        RETURN v2.player.name AS Name, Age;
++----------------------+-----+
+| Name                 | Age |
++----------------------+-----+
+| "Luka Doncic"        | 20  |
+| "Ben Simmons"        | 22  |
+| "Kristaps Porzingis" | 23  |
++----------------------+-----+
+```
