--- a/docs-2.0-en/2.quick-start/6.cheatsheet-for-ngql.md
+++ b/docs-2.0-en/2.quick-start/6.cheatsheet-for-ngql.md
@@ -103,9 +103,9 @@
     | int rank(edge)         | Returns the rank value of an edge.   |
     |vertex | Returns the information of vertices, including VIDs, tags, properties, and values.|
     |edge | Returns the information of edges, including edge types, source vertices, destination vertices, ranks, properties, and values.|
-    |vertices | Returns the information of vertices in a subgraph. For more information, see [GET SUBGRAPH](../3.ngql-guide/16.subgraph-and-path/1.get-subgraph.md).|
-    |edges | Returns the information of edges in a subgraph. For more information, see [GET SUBGRAPH](../3.ngql-guide/16.subgraph-and-path/1.get-subgraph.md).|
-    |path  | Returns the information of a path. For more information, see [FIND PATH](../3.ngql-guide/16.subgraph-and-path/2.find-path.md).|
+    |vertices | Returns the information of vertices in a subgraph. For more information, see [GET SUBGRAPH](../3.ngql-guide/7.general-query-statements/7.get-subgraph.md).|
+    |edges | Returns the information of edges in a subgraph. For more information, see [GET SUBGRAPH](../3.ngql-guide/7.general-query-statements/7.get-subgraph.md).|
+    |path  | Returns the information of a path. For more information, see [FIND PATH](../3.ngql-guide/7.general-query-statements/6.find-path.md).|
 
   * For statements compatible with openCypher
 
@@ -418,8 +418,8 @@
 
 | Type                                                         | Syntax                                                         | Example                                                         | Description                                                         |
 | ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
-| [GET SUBGRAPH](../3.ngql-guide/16.subgraph-and-path/1.get-subgraph.md) | `GET SUBGRAPH [WITH PROP] [<step_count> {STEP|STEPS}] FROM {<vid>, <vid>...} [{IN | OUT | BOTH} <edge_type>, <edge_type>...] YIELD [VERTICES AS <vertex_alias>] [,EDGES AS <edge_alias>] ` | `GET SUBGRAPH 1 STEPS FROM "player100" YIELD VERTICES AS nodes, EDGES AS relationships` | Retrieves information of vertices and edges reachable from the source vertices of the specified edge types and returns information of the subgraph.  |
-| [FIND PATH](../3.ngql-guide/16.subgraph-and-path/2.find-path.md) | `FIND { SHORTEST | ALL | NOLOOP } PATH [WITH PROP] FROM <vertex_id_list> TO <vertex_id_list> OVER <edge_type_list> [REVERSELY | BIDIRECT] [<WHERE clause>] [UPTO <N> {STEP|STEPS}] YIELD path as <alias> [| ORDER BY $-.path] [| LIMIT <M>]` | `FIND SHORTEST PATH FROM "player102" TO "team204" OVER * YIELD path as p`    | Finds the paths between the selected source vertices and destination vertices. A returned path is like `(<vertex_id>)-[:<edge_type_name>@<rank>]->(<vertex_id)`. |
+| [GET SUBGRAPH](../3.ngql-guide/7.general-query-statements/7.get-subgraph.md) | `GET SUBGRAPH [WITH PROP] [<step_count> {STEP|STEPS}] FROM {<vid>, <vid>...} [{IN | OUT | BOTH} <edge_type>, <edge_type>...] YIELD [VERTICES AS <vertex_alias>] [,EDGES AS <edge_alias>] ` | `GET SUBGRAPH 1 STEPS FROM "player100" YIELD VERTICES AS nodes, EDGES AS relationships` | Retrieves information of vertices and edges reachable from the source vertices of the specified edge types and returns information of the subgraph.  |
+| [FIND PATH](../3.ngql-guide/7.general-query-statements/6.find-path.md) | `FIND { SHORTEST | ALL | NOLOOP } PATH [WITH PROP] FROM <vertex_id_list> TO <vertex_id_list> OVER <edge_type_list> [REVERSELY | BIDIRECT] [<WHERE clause>] [UPTO <N> {STEP|STEPS}] YIELD path as <alias> [| ORDER BY $-.path] [| LIMIT <M>]` | `FIND SHORTEST PATH FROM "player102" TO "team204" OVER * YIELD path as p`    | Finds the paths between the selected source vertices and destination vertices. A returned path is like `(<vertex_id>)-[:<edge_type_name>@<rank>]->(<vertex_id)`. |
 
 ## Query tuning statements
 
