--- a/docs-2.0-zh/2.quick-start/6.cheatsheet-for-ngql-command.md
+++ b/docs-2.0-zh/2.quick-start/6.cheatsheet-for-ngql-command.md
@@ -105,9 +105,9 @@
     |int rank(edge) | 返回边的 rank。|
     |vertex | 返回点的信息。包括点 ID、Tag、属性和值。|
     |edge | 返回边的信息。包括 Edge type、起始点 ID、目的点 ID、rank、属性和值。|
-    |vertices | 返回子图中的点的信息。详情参见 [GET SUBGRAPH](../3.ngql-guide/16.subgraph-and-path/1.get-subgraph.md)。|
-    |edges | 返回子图中的边的信息。详情参见 [GET SUBGRAPH](../3.ngql-guide/16.subgraph-and-path/1.get-subgraph.md)。|
-    |path  | 返回路径信息。详情参见 [FIND PATH](../3.ngql-guide/16.subgraph-and-path/2.find-path.md)。|
+    |vertices | 返回子图中的点的信息。详情参见 [GET SUBGRAPH](../3.ngql-guide/7.general-query-statements/7.get-subgraph.md)。|
+    |edges | 返回子图中的边的信息。详情参见 [GET SUBGRAPH](../3.ngql-guide/7.general-query-statements/7.get-subgraph.md)。|
+    |path  | 返回路径信息。详情参见 [FIND PATH](../3.ngql-guide/7.general-query-statements/6.find-path.md)。|
 
   * openCypher 兼容语句适用
 
@@ -420,8 +420,8 @@
 
 | 类型                                                         | 语法                                                         | 示例                                                         | 说明                                                         |
 | ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
-| [子图](../3.ngql-guide/16.subgraph-and-path/1.get-subgraph.md) | `GET SUBGRAPH [WITH PROP] [<step_count> {STEP|STEPS}] FROM {<vid>, <vid>...} [{IN | OUT | BOTH} <edge_type>, <edge_type>...] YIELD [VERTICES AS <vertex_alias>] [,EDGES AS <edge_alias>] ` | `GET SUBGRAPH 1 STEPS FROM "player100" YIELD VERTICES AS nodes, EDGES AS relationships` | 指定 Edge type 的起始点可以到达的点和边的信息，返回子图信息。  |
-| [路径](../3.ngql-guide/16.subgraph-and-path/2.find-path.md) | `FIND { SHORTEST | ALL | NOLOOP } PATH [WITH PROP] FROM <vertex_id_list> TO <vertex_id_list> OVER <edge_type_list> [REVERSELY | BIDIRECT]  [<WHERE clause>] [UPTO <N> {STEP|STEPS}]  YIELD path as <alias> [| ORDER BY $-.path] [| LIMIT <M>]` | `FIND SHORTEST PATH FROM "player102" TO "team204" OVER * YIELD path as p`    | 查找指定起始点和目的点之间的路径。返回的路径格式类似于`(<vertex_id>)-[:<edge_type_name>@<rank>]->(<vertex_id)`。 |
+| [子图](../3.ngql-guide/7.general-query-statements/7.get-subgraph.md) | `GET SUBGRAPH [WITH PROP] [<step_count> {STEP|STEPS}] FROM {<vid>, <vid>...} [{IN | OUT | BOTH} <edge_type>, <edge_type>...] YIELD [VERTICES AS <vertex_alias>] [,EDGES AS <edge_alias>] ` | `GET SUBGRAPH 1 STEPS FROM "player100" YIELD VERTICES AS nodes, EDGES AS relationships` | 指定 Edge type 的起始点可以到达的点和边的信息，返回子图信息。  |
+| [路径](../3.ngql-guide/7.general-query-statements/6.find-path.md) | `FIND { SHORTEST | ALL | NOLOOP } PATH [WITH PROP] FROM <vertex_id_list> TO <vertex_id_list> OVER <edge_type_list> [REVERSELY | BIDIRECT]  [<WHERE clause>] [UPTO <N> {STEP|STEPS}]  YIELD path as <alias> [| ORDER BY $-.path] [| LIMIT <M>]` | `FIND SHORTEST PATH FROM "player102" TO "team204" OVER * YIELD path as p`    | 查找指定起始点和目的点之间的路径。返回的路径格式类似于`(<vertex_id>)-[:<edge_type_name>@<rank>]->(<vertex_id)`。 |
 
 ## 查询调优
 
@@ -459,3 +459,12 @@
   | 语法                                                | 示例                                            | 说明                                         |
   | --------------------------------------------------- | ----------------------------------------------- | -------------------------------------------- |
   | `KILL QUERY (session=<session_id>, plan=<plan_id>)` | `KILL QUERY(SESSION=1625553545984255,PLAN=163)` | 在一个会话中执行命令终止另一个会话中的查询。 |
+
+
+* [终止会话](../3.ngql-guide/17.query-tuning-statements/2.kill-session.md)
+
+  | 语法                                                | 示例                                            | 说明                                         |
+  | --------------------------------------------------- | ----------------------------------------------- | -------------------------------------------- |
+  | `KILL {SESSION|SESSIONS} <SessionId>` | `KILL SESSION 1672887983842984` | 终止单个会话。 |
+  | `SHOW SESSIONS | YIELD $-.SessionId AS sid [WHERE <filter_clause>] | KILL {SESSION|SESSIONS} $-.sid` | `SHOW SESSIONS | YIELD $-.SessionId AS sid, $-.CreateTime as CreateTime | ORDER BY $-.CreateTime ASC | LIMIT 2 | KILL SESSIONS $-.sid` | 终止多个会话。 |
+  | `SHOW SESSIONS | KILL SESSIONS $-.SessionId` | `SHOW SESSIONS | KILL SESSIONS $-.SessionId`| 终止所有会话。 |
