--- a/docs-2.0-zh/3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
+++ b/docs-2.0-zh/3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
@@ -1,7 +1,6 @@
 # {{nebula.name}} 查询语句概述
 
-
-本文介绍 {{nebula.name}} 的查询语句分类及各个语句的使用场景。
+本文介绍 {{nebula.name}} 的通用的查询语句分类及各类语句的使用场景。
 
 ## 背景信息
 
@@ -17,8 +16,9 @@
 - [MATCH](#match)
 - [FIND PATH](#find_path)
 - [GET SUBGRAPH](#get_subgraph)
+- [SHOW](#show)
 
-`FETCH PROP ON`和`LOOKUP ON`更多用于数据检索；`GO`和`MATCH`用于更复杂的查询和图数据遍历；`FIND PATH`和`GET SUBGRAPH`用于图数据的路径查询和子图查询。
+`FETCH PROP ON`和`LOOKUP ON`更多用于基础的数据查询；`GO`和`MATCH`用于更复杂的查询和图数据遍历；`FIND PATH`和`GET SUBGRAPH`用于图数据的路径查询和子图查询。
 
 ## 用法及使用场景
 
@@ -161,8 +161,7 @@ FIND SHORTEST PATH FROM "player102" TO "team204" OVER * \
        └─────────────────────────── 查找最短路径
 ```
 
-更多信息，请参见[FIND PATH](../16.subgraph-and-path/2.find-path.md)。
-
+更多信息，请参见[FIND PATH](6.find-path.md)。
 
 ### GET SUBGRAPH 子图查询
 
@@ -187,7 +186,32 @@ GET SUBGRAPH 5 STEPS FROM "player101" \
    └────────────────────────────── 返回所有的点、边
 ```
 
-更多信息，请参见[GET SUBGRAPH](../16.subgraph-and-path/1.get-subgraph.md)。
+更多信息，请参见[GET SUBGRAPH](7.get-subgraph.md)。
+
+### SHOW 查询元数据
+
+SHOW 语句主要用于获取数据库的元数据信息，而不是用于获取存储在数据库中的实际数据内容。这类语句通常用于查询数据库的结构和配置，如查看现有的图空间、标签、边类型、索引等。
+
+  | 语句                                                         | 语法                                              | 示例                                 | 说明                                                     |
+  | ------------------------------------------------------------ | ------------------------------------------------- | ------------------------------------ | -------------------------------------------------------- |
+  | [SHOW CHARSET](6.show/1.show-charset.md) | `SHOW CHARSET`                                    | `SHOW CHARSET`                       | 显示当前的字符集。                                       |
+  | [SHOW COLLATION](6.show/2.show-collation.md) | `SHOW COLLATION`                                  | `SHOW COLLATION`                     | 显示当前的排序规则。                                     |
+  | [SHOW CREATE SPACE](6.show/4.show-create-space.md) | `SHOW CREATE SPACE <space_name>`                  | `SHOW CREATE SPACE basketballplayer` | 显示指定图空间的创建语句。                               |
+  | [SHOW CREATE TAG/EDGE](6.show/5.show-create-tag-edge.md) | `SHOW CREATE {TAG <tag_name> | EDGE <edge_name>}` | `SHOW CREATE TAG player`             | 显示指定 Tag/Edge type 的基本信息。                        |
+  | [SHOW HOSTS](6.show/6.show-hosts.md) | `SHOW HOSTS [GRAPH | STORAGE | META]`               | `SHOW HOSTS`<br>`SHOW HOSTS GRAPH`   | 显示 Graph、Storage、Meta 服务主机信息、版本信息。         |
+  | [SHOW INDEX STATUS](6.show/7.show-index-status.md) | `SHOW {TAG | EDGE} INDEX STATUS`                  | `SHOW TAG INDEX STATUS`              | 重建原生索引的作业状态，以便确定重建索引是否成功。       |
+  | [SHOW INDEXES](6.show/8.show-indexes.md) | `SHOW {TAG | EDGE} INDEXES`                       | `SHOW TAG INDEXES`                   | 列出当前图空间内的所有 Tag 和 Edge type（包括属性）的索引。 |
+  | [SHOW PARTS](6.show/9.show-parts.md) | `SHOW PARTS [<part_id>]`                          | `SHOW PARTS`                         | 显示图空间中指定分片或所有分片的信息。                   |
+  | [SHOW ROLES](6.show/10.show-roles.md) | `SHOW ROLES IN <space_name>`                      | `SHOW ROLES in basketballplayer`     | 显示分配给用户的角色信息。                               |
+  | [SHOW SNAPSHOTS](6.show/11.show-snapshots.md) | `SHOW SNAPSHOTS`                                  | `SHOW SNAPSHOTS`                     | 显示所有快照信息。                                       |
+  | [SHOW SPACES](6.show/12.show-spaces.md) | `SHOW SPACES`                                     | `SHOW SPACES`                        | 显示现存的图空间。                                       |
+  | [SHOW STATS](6.show/14.show-stats.md) | `SHOW STATS`                                      | `SHOW STATS`                         | 显示最近`STATS`作业收集的图空间统计信息。                |
+  | [SHOW TAGS/EDGES](6.show/15.show-tags-edges.md) | `SHOW TAGS | EDGES`                               | `SHOW TAGS`、`SHOW EDGES`            | 显示当前图空间内的所有 Tag/Edge type。                    |
+  | [SHOW USERS](6.show/16.show-users.md) | `SHOW USERS`                                      | `SHOW USERS`                         | 显示用户信息。                                           |
+  | [SHOW SESSIONS](6.show/17.show-sessions.md) | `SHOW SESSIONS `                                  | ` SHOW SESSIONS`                     | 显示所有会话信息。                                       |
+  | [SHOW SESSIONS](6.show/17.show-sessions.md) | `SHOW SESSION <Session_Id>`                       | `SHOW SESSION 1623304491050858`      | 指定会话 ID 进行查看。                                     |
+  | [SHOW QUERIES](6.show/18.show-queries.md) | `SHOW [ALL] QUERIES`                              | `SHOW QUERIES`                       | 查看当前 Session 中正在执行的查询请求信息。                |
+  | [SHOW META LEADER](6.show/19.show-meta-leader.md) | `SHOW META LEADER`                                | `SHOW META LEADER`                   | 显示当前 Meta 集群的 leader 信息。                           |
 
 ## 复合查询
 
@@ -230,3 +254,10 @@ nebula> MATCH (v:player)-->(v2:player) \
 | "Kristaps Porzingis" | 23  |
 +----------------------+-----+
 ```
+
+## 更多信息
+
+- [nGQL 简明教程](https://www.siwei.io/ngql-tutorial/)
+- [nGQL 语句汇总](../../2.quick-start/6.cheatsheet-for-ngql-command.md)
+
+
