--- a/docs-2.0-zh/3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
+++ b/docs-2.0-zh/3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
@@ -147,16 +147,16 @@ MATCH (v:player{name:"Tim Duncan"})--(v2:player) \
 **示例**：
 
 ```ngql
-FIND SHORTEST PATH FROM "player102" TO "team204" OVER * \   
-     ──┬─────            ───────────┬─────────── ───┬───    
-  YIELD│path AS p; ┌────────────────┘               │       
-       │────┬────  │     ┌──────────────────────────┘       
-       │    │      │     │                                  
-       │    │      │     └───────── 经由所有类型的边出向探索
-       │    │      │                                        
-       │    │      └─────────────── 从给定的起点、终点 VID
-       │    │                                               
-       │    └────────────────────── 返回路径为 p 列
+FIND SHORTEST PATH FROM "player102" TO "team204" OVER * YIELD path AS p;
+     ──┬─────            ───────────┬─────────── ───┬───      ────┬────
+       │           ┌────────────────┘               │             │ 
+       │           │     ┌──────────────────────────┘             │
+       │           │     │                                        │
+       │           │     └───────── 经由所有类型的边出向探索          └─── 返回路径为 p 列
+       │           │                                              
+       │           └─────────────── 从给定的起点、终点 VID           
+       │                                                   
+       │    
        │                                                    
        └─────────────────────────── 查找最短路径
 ```
@@ -174,16 +174,14 @@ FIND SHORTEST PATH FROM "player102" TO "team204" OVER * \
 **示例**：
 
 ```ngql
-GET SUBGRAPH 5 STEPS FROM "player101" \           
-             ───┬─── ─────┬──────────             
-  YIELD VERTICES AS nodes, EDGES AS relationships;
-        ────┬───┼─────────┼───────────────────────
-   ┌────────┘   │         │                       
-   │            │         └─────── 从 "player101" 开始出发
-   │            │                                 
-   │            └───────────────── 获取 5 步的探索
-   │                                              
-   └────────────────────────────── 返回所有的点、边
+GET SUBGRAPH 5 STEPS FROM "player101" YIELD VERTICES AS nodes, EDGES AS relationships;           
+             ───┬─── ─────┬──────────       ──────────────────────────┬──────────────── 
+                │         │                                           │
+                │         │                                           │
+                │         └─────── 从 "player101" 开始出发              └──── 返回所有的点、边
+                │                                 
+                └───────────────── 获取 5 步的探索
+                                               
 ```
 
 更多信息，请参见[GET SUBGRAPH](7.get-subgraph.md)。
