--- a/docs-2.0-zh/3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
+++ b/docs-2.0-zh/3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
@@ -18,7 +18,7 @@
 - [GET SUBGRAPH](#get_subgraph)
 - [SHOW](#show)
 
-`FETCH PROP ON`和`LOOKUP ON`更多用于基础的数据查询；`GO`和`MATCH`用于更复杂的查询和图数据遍历；`FIND PATH`和`GET SUBGRAPH`用于图数据的路径查询和子图查询。
+`FETCH PROP ON`和`LOOKUP ON`更多用于基础的数据查询；`GO`和`MATCH`用于更复杂的查询和图数据遍历；`FIND PATH`和`GET SUBGRAPH`用于图数据的路径查询和子图查询；`SHOW`用于获取数据库的元数据信息。
 
 ## 用法及使用场景
 
@@ -152,7 +152,7 @@ FIND SHORTEST PATH FROM "player102" TO "team204" OVER * YIELD path AS p;
        │           ┌────────────────┘               │             │ 
        │           │     ┌──────────────────────────┘             │
        │           │     │                                        │
-       │           │     └───────── 经由所有类型的边出向探索          └─── 返回路径为 p 列
+       │           │     └───────── 经由所有类型的边出向探索        　 └────　返回路径为 p 列
        │           │                                              
        │           └─────────────── 从给定的起点、终点 VID           
        │                                                   
