--- a/docs-2.0-zh/3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
+++ b/docs-2.0-zh/3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
@@ -26,7 +26,7 @@
 
 **用法**：用于获取指定点或边的属性。
 
-**场景**：已知具体的点 ID 或边 ID，并想获取其属性时使用。
+**场景**：已知具体的点 ID 或边 ID，并想获取其属性。
 
 **说明**：
 
@@ -54,7 +54,7 @@ FETCH PROP ON player "player100" YIELD properties(vertex);
 
 **用法**：用于基于索引查询点或边 ID。
 
-**场景**：需要根据属性值查找点或边的 ID 时使用。
+**场景**：根据属性值查找点或边的 ID。
 
 **说明**：
 
@@ -82,7 +82,7 @@ LOOKUP ON player WHERE player.name == "Tony Parker" YIELD id(vertex);
 
 **用法**：用于基于给定的点进行图遍历，按需返回起始点、边或目标点的信息。可以指定遍历的深度、边的类型、方向等。
 
-**场景**：用于复杂的图遍历，比如找到某个点的朋友、朋友的朋友等。
+**场景**：复杂的图遍历，比如找到某个点的朋友、朋友的朋友等。
 
 **说明**：
 
@@ -112,7 +112,7 @@ GO 3 STEPS FROM "player102" OVER follow YIELD dst(edge);
 
 **用法**：用于执行复杂的[图模式](../1.nGQL-overview/3.graph-patterns.md)匹配查询。
 
-**场景**：需要进行复杂的图模式匹配时使用，比如寻找满足特定模式的点和边的组合。
+**场景**：复杂的图模式匹配时使用，比如寻找满足特定模式的点和边的组合。
 
 **说明**：
 
@@ -124,7 +124,7 @@ MATCH 语句兼容 OpenCypher 的语法，但是有一些差异：
   
 - 新增`WHERE id(v) == "player100"`语法。
   
-- 必须使用`RETURN`子句指定返回的信息
+- 必须使用`RETURN`子句指定返回的信息。
 
 **示例**：
 
@@ -140,7 +140,7 @@ MATCH (v:player{name:"Tim Duncan"})--(v2:player) \
 
 **用法**：用于查询给定的起始点和目标点之间的所有路径；或者查询路径中的点和边的属性时使用。
 
-**场景**：需要查询两个点之间的所有路径时使用。
+**场景**：查询两个点之间的所有路径。
 
 **说明**：必须使用`YIELD`子句指定返回信息。
 
@@ -234,7 +234,7 @@ nebula> GO FROM "player100" OVER follow \
 +-------------+
 ```
 
-管道符`|`仅适用于 nGQL，不适用于 OpenCypher 语句，即不适合在 MATCH 语句中使用管道符。如果需要使用 MATCH 语句进行复合查询，可以使用 [WITH 子句](../8.clauses-and-options/with.md)。
+管道符`|`仅适用于 nGQL，不适用于 OpenCypher 语句，即不能在 MATCH 语句中使用管道符。如果需要使用 MATCH 语句进行复合查询，可以使用 [WITH 子句](../8.clauses-and-options/with.md)。
 
 示例：
 
