--- a/docs-2.0-zh/3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
+++ b/docs-2.0-zh/3.ngql-guide/7.general-query-statements/1.general-query-statements-overview.md
@@ -167,7 +167,7 @@ FIND SHORTEST PATH FROM "player102" TO "team204" OVER * YIELD path AS p;
 
 **用法**：提取满足特定条件的图的一部分；查询子图中的点和边的属性。
 
-**场景**：需要分析图的局部结构或特定区域时非常有用，比如提取某个人的社交网络子图，或者提取某个区域的交通网络。
+**场景**：分析图的局部结构或特定区域时非常有用，比如提取某个人的社交网络子图，或者提取某个区域的交通网络。
 
 **说明**：必须使用`YIELD`子句指定返回信息。
 
